# huggingface-datasets_cocoapi-tools

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  deploy.yaml
hfcocoapi/: const.py  typehint.py  utils.py
hfcocoapi/models/: __init__.py  category.py  image.py  info.py  license.py
hfcocoapi/processors/: __init__.py  caption.py  instances.py  person_keypoint.py  processor.py
hfcocoapi/tasks/: __init__.py  annotation.py  caption.py  instance.py  person_keypoint.py
